arguments mitigating performance issues when operating on huge
buffers.

+++
** The command 'delete-indentation' now operates on the active region.
If the region is active, the command joins all the lines in the
region.  When there's no active region, the command works on the
current and the previous or the next line, as before.


* Changes in Specialized Modes and Packages in Emacs 27.1

** The 'list-processes' command now includes port numbers in the
network connection information (in addition to the host name).

** The 'cl' package is now officially deprecated in favor of `cl-lib`.

+++
** winner
*** A new variable, 'winner-boring-buffers-regexp', has been added.

** table
** 'table-generate-source' and friends now support outputting wiki and
mediawiki format tables.

---
** telnet-mode
*** Reverting a buffer in 'telnet-mode' will restart a closed connection.

** goto-addr
*** A way to more conveniently specify what URI address schemes that
should be ignored have been added via the
'goto-address-uri-schemes-ignored' variable.

+++
** tex-mode
*** 'latex-noindent-commands' controls indentation of certain commands.
You can use this new variable to control indentation of arguments of
\emph, \footnote, and similar commands.

** byte compiler
*** 'byte-compile-dynamic' is now obsolete.
This is because on the one hand it suffers from various misbehaviors in corner
cases that have plagued it for years, and on the other experiments indicated
that it doesn't bring any measurable benefit.

** compile.el
---
*** In 'compilation-error-regexp-alist', 'line' (and 'end-line') can
be functions.

** cl-lib.el
+++
*** 'cl-defstruct' has a new ':noinline' argument to prevent inlining
its functions.

+++
*** 'cl-defstruct' slots accept a ':documentation' property

---
*** 'cl-values-list' will now signal an error if its argument isn't a list.

** doc-view.el
*** New commands 'doc-view-presentation' and 'doc-view-fit-window-to-page'.